--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -576,6 +576,30 @@ img {
     border: 1px solid #EEEEEE;
 }
 
+.portfolio-card-text{
+    position: absolute;
+    top: 0;
+    background-color: rgba(33, 150, 243, 0.9);
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    padding: 63px 24px 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms linear;
+
+}
+
+.portfolio-card-description{
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-item:hover .portfolio-card-text{
+    transform: translateY(0%);
+}
+
 .portfolio-wrapper {
     padding: 20px 24px 20px 24px;
 }
@@ -599,4 +623,35 @@ img {
 
 .border-header {
     border-bottom: 1px solid #ECECEC;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(44, 137, 212, 0.555);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal {
+    position: absolute;
+    width: 528px;
+    min-height: 581px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
