--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,6 +51,7 @@ img {
     color: var(--second-basic-color);
     display: block;
     padding: 32px 0px 32px 0px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }  
 
 .header-item:hover,
@@ -69,16 +70,6 @@ img {
     border-radius: 2px;
 }
 
-/*.header-list .link.current::after {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color:#2196F3;
-    bottom: -1px;
-    left: 0;
-}*/
 
 .header-list .link.current {
     position: relative;
@@ -135,6 +126,7 @@ img {
     letter-spacing: 0.02em;
     color: var(--main-team);
     margin-right: 50px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-telephone {
@@ -143,6 +135,7 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-team);  
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-icon {
@@ -311,8 +304,10 @@ img {
 
 .about-us-description {
     font-weight: 700;
-    letter-spacing: 0.03em;
+    font-size: 14px;
+    line-height: 16px;
     text-align: center;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
 }
@@ -392,6 +387,7 @@ img {
     justify-content: center;
     align-items: center;
     fill: #afb1b8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-item + .team-soc-item {
@@ -430,6 +426,12 @@ img {
     color: #afb1b8;
     background-color: #fff;
     padding: 16px 32px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.client-link .client-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
@@ -530,6 +532,7 @@ img {
 .footer-soc-link:hover,
 .footer-soc-link:focus{
     background-color: #2196F3;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link {
@@ -589,6 +592,8 @@ img {
     padding: 6px 22px 6px 22px;
     border-radius: 4px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }  
 
 .button-portfolio:hover,
@@ -631,7 +636,7 @@ img {
     letter-spacing: 0.03em;
     padding: 63px 24px 63px 24px;
     transform: translateY(100%);
-    transition: transform 250ms linear;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
